--- a/RoadWarrior/Base.lproj/Main.storyboard
+++ b/RoadWarrior/Base.lproj/Main.storyboard
@@ -59,10 +59,10 @@
             </objects>
             <point key="canvasLocation" x="137" y="-600"/>
         </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="sEX-Gn-evw">
             <objects>
-                <viewController id="6IQ-Jp-bST" sceneMemberID="viewController">
+                <viewController id="6IQ-Jp-bST" customClass="HomeViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5mF-Qu-pbL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -109,10 +109,10 @@
             </objects>
             <point key="canvasLocation" x="1921" y="-600"/>
         </scene>
-        <!--Camera View Controller-->
+        <!--Settings View Controller-->
         <scene sceneID="JUf-Fk-5W6">
             <objects>
-                <viewController id="AdX-bo-r4B" customClass="CameraViewController" customModule="RoadWarrior" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="AdX-bo-r4B" customClass="SettingsViewController" customModule="RoadWarrior" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="POc-fr-ZNO">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -129,7 +129,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" textContentType="tel"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="My Phone Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UV0-4k-Hdr">
                                 <rect key="frame" x="35" y="170" width="143" height="21"/>
@@ -146,16 +146,28 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="biO-JU-SiP">
-                                <rect key="frame" x="67" y="298" width="240" height="128"/>
+                                <rect key="frame" x="67" y="297" width="240" height="128"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
                             </textView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9XL-3c-SeC">
+                                <rect key="frame" x="235" y="523" width="98" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Save Changes"/>
+                                <connections>
+                                    <action selector="updateNSDefaults:" destination="AdX-bo-r4B" eventType="touchUpInside" id="Y9Y-DL-I6s"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="20Q-GS-5Mv"/>
                     </view>
+                    <connections>
+                        <outlet property="defaultMessageTextField" destination="biO-JU-SiP" id="6Ur-G4-8D5"/>
+                        <outlet property="phoneNumberTextField" destination="ukO-LD-yUZ" id="K4v-jF-29E"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Qs-b9-ud3" sceneMemberID="firstResponder"/>
             </objects>
