--- a/RoadWarrior/Base.lproj/Main.storyboard
+++ b/RoadWarrior/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
         <scene sceneID="VGw-SA-irq">
             <objects>
                 <navigationController id="E4q-aO-JR9" sceneMemberID="viewController">
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xQC-Ic-0AQ">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" barStyle="black" id="xQC-Ic-0AQ">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -62,7 +62,7 @@
         <!--Home View Controller-->
         <scene sceneID="sEX-Gn-evw">
             <objects>
-                <viewController id="6IQ-Jp-bST" customClass="HomeViewController" sceneMemberID="viewController">
+                <viewController id="6IQ-Jp-bST" customClass="HomeViewController" customModule="RoadWarrior" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5mF-Qu-pbL">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -186,7 +186,7 @@
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences" spellCheckingType="yes"/>
                             </textView>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9XL-3c-SeC">
-                                <rect key="frame" x="235" y="523" width="98" height="30"/>
+                                <rect key="frame" x="247" y="100" width="98" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Save Changes"/>
                                 <connections>
